--- a/sfzl/designer/index.html
+++ b/sfzl/designer/index.html
@@ -265,7 +265,7 @@
             	</div>
             </div>
 		</div>
-		<!--search start-->
+		<!--search end-->
 
         <!--designer start-->
         <div class="w pro_box designer">
