--- a/sfzl/diy/faList.html
+++ b/sfzl/diy/faList.html
@@ -147,7 +147,7 @@
         </div>
     </div>
 
-    <div id="diyBox" class="faListWrapper">
+    <div id="diyBox" class="wrapperBox faListWrapper">
 		<!--lunbo-->
 		<div class="banner">
 		    <div class="bannerbox">
