--- a/sfzl/factory/detail.html
+++ b/sfzl/factory/detail.html
@@ -70,59 +70,68 @@
                 </div>
                 <div class="title">
                 	<div class="main">
-                		<span>走天下工作室</span>
+                		<span>吴江市花艺宝印花制品有限公司</span>
                 		<i class="icon"></i>
                 	</div>
-                	<span class="sub">ZHENZHEN DESIGN</span>
+                	<span class="sub">http://www.asdasdadsdasd.com/asdasd</span>
                 </div>
             </div>
             <div class="r">
                 <div class="view">
-                	总浏览量：<i>198622</i>
+                	完成订单总量：<i>198622</i>
                 </div>
             </div>
         </div>
     </div>
 
-    <div id="designerBox" class="w wrapperBox studioWrapper">
-        <div class="infoBox">
+    <div id="factoryBox" class="w wrapperBox detailWrapper">
+        <div class="deLBox">
 			<div class="face">
-				<img src="../public/common/img/designerbigface.jpg">
+				<img src="../public/common/img/faDetailImg.jpg">
 			</div>
-			<div class="b1">
-				<h3>设计是思想的源泉</h3>
-				<ul>
-					<li>作品：1233幅</li>
-					<li>人气：1214赞</li>
-					<li>工作室年龄：1年</li>
-				</ul>
-			</div>
-			<a href="javascript:;" class="linkBtn">
-				<i class="icon"></i><span>联系工作室</span>
-			</a>
-			<a href="javascript:;" class="likeBtn">
-				<span class="s1">
-					<i class="icon"></i><span>点赞</span>
-				</span>
-				<span class="s2">135268</span>
-			</a>
 			
+        </div>
+        <div class="deRBox">
+        	<div class="ulBox">
+        		<div class="s1">
+        			<h4>主营业务</h4>
+        			<i class="line"></i>
+        		</div>
+        		<ul>
+        			<li>主营工艺: 数码印花</li>
+					<li>发货周期: 打样3-5天，大货7-15天</li>
+					<li>电话: 0575-85993333</li>
+					<li>邮箱: 807079988@qq.com</li>
+					<li>QQ联系: 807079988</li>
+        		</ul>
+        	</div>
+			<div class="ulBox">
+				<div class="s1">
+        			<h4>工厂分布</h4>
+        			<i class="line"></i>
+        			<a href="javascript:;" class="moreBtn">全部 ></a>
+        		</div>
+        		<ul>
+        			<li>广东省深圳市罗湖区东门中路东大布料辅料窗帘城负一层</li>
+					<li>广东省深圳市福田区东门中路东大布料辅料负一层</li>
+					<li>广东省深圳市保安区东门中路布料辅料窗帘城负二层</li>
+					<li>广东省深圳市龙华区东门中路东大辅料窗帘城负五层</li>
+        		</ul>
+        	</div>
         </div>
 
 		<!--search start-->
 		<div class="w listSearchBox">
 			<div class="tabBox2">
-				<a href="javascript:;" class="on">全部(12580)</a>      
-				<a href="javascript:;" class="">橱窗花型 (0)</a>
-				<a href="javascript:;" class="">传统花型 (0)</a>        
-				<a href="javascript:;" class="">手绘花型 (0))</a>       
-				<a href="javascript:;" class="">花型卡花型 (0)</a>       
-				<a href="javascript:;" class="">折扣花型 (0)</a>
+				<a href="javascript:;" class="on">面料</a>      
+				<a href="javascript:;" class="">印花展示</a>
+				<a href="javascript:;" class="">设备展示</a>        
+				<a href="javascript:;" class="">工厂简介</a>       
 			</div>
-			<div class="search_wt">
+			<div class="btnBox">
                 <form>
-                    <input type="text" class="search_input" placeholder="请输入关键字" />
-                    <button class="search_btn">搜索</button>
+                    <button class="linkBtn">联系工厂</button>
+                    <button class="orderBtn">在线订单</button>
                 </form>
             </div>
             <div class="searchTag">
