--- a/sfzl/index/index.html
+++ b/sfzl/index/index.html
@@ -71,76 +71,241 @@
 	<div class="menubox">
 		<div class="w">
 			<div class="all_typebox">
-				<div class="all_type">全部商品分类</div>
-				<div class="menu_main">
-					<ul class="nav_list clearfloat">
-						<li>
-							<h3>丝纺城</h3>
-							<div class="drop_box">
-								<dl class="fore">
-									<dt>
-										<a href="#" target="_blank">大家电<i>&gt;</i></a>
-									</dt>
-									<dd>
-										<a href="#" target="_blank">平板电视</a>
-										<a href="#" target="_blank">空调</a>
-										<a href="#" target="_blank">平板电视</a>
-										<a href="#" target="_blank">空调</a>
-										<a href="#" target="_blank">平板电视</a>
-										<a href="#" target="_blank">空调</a>
-										<a href="#" target="_blank">平板电视</a>
-										<a href="#" target="_blank">空调</a>
-										<a href="#" target="_blank">平板电视</a>
-										<a href="#" target="_blank">空调</a>
-										<a href="#" target="_blank">平板电视</a>
-										<a href="#" target="_blank">空调</a>
-									</dd>
-								</dl>
-								<dl class="fore">
-									<dt>
-										<a href="#" target="_blank">大家仿电<i>&gt;</i></a>
-									</dt>
-									<dd>
-										<a href="#" target="_blank">平板电视</a>
-										<a href="#" target="_blank">空调</a>
-										<a href="#" target="_blank">平板电视</a>
-										<a href="#" target="_blank">空调</a>
-										<a href="#" target="_blank">平板电视</a>
-										<a href="#" target="_blank">空调</a>
-									</dd>
-								</dl>
-							</div>
-						</li>
-						<li>
-							<h3>DIY定制</h3>
-							<div class="drop_box">
-								<dl class="fore">
-									<dt>
-										<a href="#" target="_blank">大家仿电<i>&gt;</i></a>
-									</dt>
-									<dd>
-										<a href="#" target="_blank">平板电视</a>
-									</dd>
-								</dl>
-							</div>
-						</li>
-						<li>
-							<h3>设计师之家</h3>
-							<div class="drop_box">3</div>
-						</li>
-						<li>
-							<h3>找工厂</h3>
-							<div class="drop_box">4</div>
-						</li>
-						<li>
-							<h3>社区</h3>
-							<div class="drop_box">5</div>
-						</li>
-					</ul>
-					
-
-				</div>
-			</div>
+                <div class="all_type">全部商品分类</div>
+                <div class="menu_main">
+                    <ul class="nav_list clearfloat">
+                        <li>
+                            <h3>丝绸</h3>
+                            <div class="drop_box">
+                                <dl class="fore">
+                                    <dt>
+                                        <a href="#" target="_blank">绸类<i>&gt;</i></a>
+                                    </dt>
+                                    <dd>
+                                        <a href="#" target="_blank">斜纹绸</a>
+                                        <a href="#" target="_blank">双宫绸</a>
+                                        <a href="#" target="_blank">弹力绸</a>
+                                        <a href="#" target="_blank">美丽绸</a>
+                                        <a href="#" target="_blank">丝麻绸</a>
+                                    </dd>
+                                </dl>
+                                <dl class="fore">
+                                    <dt>
+                                        <a href="#" target="_blank">缎类<i>&gt;</i></a>
+                                    </dt>
+                                    <dd>
+                                        <a href="#" target="_blank">素绉缎</a>
+                                        <a href="#" target="_blank">弹力缎</a>
+                                        <a href="#" target="_blank">新丝缎</a>
+                                        <a href="#" target="_blank">塔丝缎</a>
+                                    </dd>
+                                </dl>
+                                <dl class="fore">
+                                    <dt>
+                                        <a href="#" target="_blank">乔其类<i>&gt;</i></a>
+                                    </dt>
+                                    <dd>
+                                        <a href="#" target="_blank">乔其</a>
+                                    </dd>
+                                </dl>
+                                <dl class="fore">
+                                    <dt>
+                                        <a href="#" target="_blank">绉类<i>&gt;</i></a>
+                                    </dt>
+                                    <dd>
+                                        <a href="#" target="_blank">双绉</a>
+                                        <a href="#" target="_blank">顺纡绉</a>
+                                        <a href="#" target="_blank">重绉</a>
+                                    </dd>
+                                </dl>
+                                <dl class="fore">
+                                    <dt>
+                                        <a href="#" target="_blank">纺类<i>&gt;</i></a>
+                                    </dt>
+                                    <dd>
+                                        <a href="#" target="_blank">雪纺</a>
+                                        <a href="#" target="_blank">丝麻雪纺</a>
+                                        <a href="#" target="_blank">电力纺</a>
+                                    </dd>
+                                </dl>
+                            </div>
+                        </li>
+                        <li>
+                            <h3>布料</h3>
+                            <div class="drop_box">
+                                <dl class="fore">
+                                    <dt>
+                                        <a href="#" target="_blank">棉<i>&gt;</i></a>
+                                    </dt>
+                                    <dd>
+                                        <a href="#" target="_blank">纯棉</a>
+                                        <a href="#" target="_blank">亚麻棉</a>
+                                        <a href="#" target="_blank">全棉灯芯绒</a>
+                                    </dd>
+                                </dl>
+                                <dl class="fore">
+                                    <dt>
+                                        <a href="#" target="_blank">麻<i>&gt;</i></a>
+                                    </dt>
+                                    <dd>
+                                        <a href="#" target="_blank">亚麻</a>
+                                        <a href="#" target="_blank">黄麻</a>
+                                        <a href="#" target="_blank">苎麻</a>
+                                        <a href="#" target="_blank">大麻</a>
+                                        <a href="#" target="_blank">剑麻</a>
+                                    </dd>
+                                </dl>
+                                <dl class="fore">
+                                    <dt>
+                                        <a href="#" target="_blank">牛仔<i>&gt;</i></a>
+                                    </dt>
+                                    <dd>
+                                    </dd>
+                                </dl>
+                            </div>
+                        </li>
+                        <li>
+                            <h3>化纤</h3>
+                            <div class="drop_box">
+                            	<dl class="fore">
+                                    <dt>
+                                        <a href="#" target="_blank">化纤<i>&gt;</i></a>
+                                    </dt>
+                                    <dd>
+                                    	<a href="#" target="_blank">涤纶</a>
+                                        <a href="#" target="_blank">牛津布</a>
+                                        <a href="#" target="_blank">锦纶布</a>
+                                        <a href="#" target="_blank">涤塔夫</a>
+                                        <a href="#" target="_blank">春亚纺</a>
+                                        <a href="#" target="_blank">涤丝纺</a>
+                                        <a href="#" target="_blank">铜氨丝</a>
+                                        <a href="#" target="_blank">腈纶(合成羊毛)</a>
+                                        <a href="#" target="_blank">维纶</a>
+                                        <a href="#" target="_blank">氯纶</a>
+                                        <a href="#" target="_blank">氨纶</a>
+                                    </dd>
+                                </dl>
+                            </div>
+                        </li>
+                        <li>
+                            <h3>皮毛</h3>
+                            <div class="drop_box">
+                            	<dl class="fore">
+                                    <dt>
+                                        <a href="#" target="_blank">毛类<i>&gt;</i></a>
+                                    </dt>
+                                    <dd>
+                                        <a href="#" target="_blank">长毛绒</a>
+                                        <a href="#" target="_blank">毛毡</a>
+                                        <a href="#" target="_blank">精纺呢绒</a>
+                                        <a href="#" target="_blank">粗纺呢绒</a>
+                                    </dd>
+                                </dl>
+                                <dl class="fore">
+                                    <dt>
+                                        <a href="#" target="_blank">皮类<i>&gt;</i></a>
+                                    </dt>
+                                    <dd>
+                                        <a href="#" target="_blank">真皮</a>
+                                        <a href="#" target="_blank">合成革</a>
+                                        <a href="#" target="_blank">麂皮绒</a>
+                                    </dd>
+                                </dl>
+                            </div>
+                        </li>
+                        <li>
+                            <h3>印花</h3>
+                            <div class="drop_box">
+                            	<dl class="fore">
+                                    <dt>
+                                        <a href="#" target="_blank">回位花<i>&gt;</i></a>
+                                    </dt>
+                                    <dd>
+                                        <a href="#" target="_blank">欧式风格</a>
+                                        <a href="#" target="_blank">几何风格</a>
+                                        <a href="#" target="_blank">动物风格</a>
+                                        <a href="#" target="_blank">植物风格</a>
+                                        <a href="#" target="_blank">人物风格</a>
+                                        <a href="#" target="_blank">中式风格</a>
+                                    </dd>
+                                </dl>
+                                <dl class="fore">
+                                    <dt>
+                                        <a href="#" target="_blank">乱花<i>&gt;</i></a>
+                                    </dt>
+                                    <dd>
+                                        <a href="#" target="_blank">欧式风格</a>
+                                        <a href="#" target="_blank">几何风格</a>
+                                        <a href="#" target="_blank">动物风格</a>
+                                        <a href="#" target="_blank">植物风格</a>
+                                        <a href="#" target="_blank">人物风格</a>
+                                        <a href="#" target="_blank">中式风格</a>
+                                    </dd>
+                                </dl>
+                            </div>
+                        </li>
+                        <li>
+                            <h3>新品</h3>
+                            <div class="drop_box">
+                            	<dl class="fore">
+                                    <dt>
+                                        <a href="#" target="_blank">丝类<i>&gt;</i></a>
+                                    </dt>
+                                    <dd>
+                                        <a href="#" target="_blank">西丽纱</a>
+                                        <a href="#" target="_blank">丝麻雪纺</a>
+                                        <a href="#" target="_blank">丝毛</a>
+                                    </dd>
+                                </dl>
+                                <dl class="fore">
+                                    <dt>
+                                        <a href="#" target="_blank">棉类<i>&gt;</i></a>
+                                    </dt>
+                                    <dd>
+                                    </dd>
+                                </dl>
+                                <dl class="fore">
+                                    <dt>
+                                        <a href="#" target="_blank">麻类<i>&gt;</i></a>
+                                    </dt>
+                                    <dd>
+                                    </dd>
+                                </dl>
+                            </div>
+                        </li>
+                        <li>
+                            <h3>辅料</h3>
+                            <div class="drop_box">
+                            	<dl class="fore">
+                                    <dt>
+                                        <a href="#" target="_blank">辅料<i>&gt;</i></a>
+                                    </dt>
+                                    <dd>
+                                        <a href="#" target="_blank">棉纱</a>
+                                        <a href="#" target="_blank">麻纱</a>
+                                        <a href="#" target="_blank">化纤纱</a>
+                                        <a href="#" target="_blank">毛纱</a>
+                                        <a href="#" target="_blank">花边</a>
+                                        <a href="#" target="_blank">拉链</a>
+                                        <a href="#" target="_blank">纽扣</a>
+                                        <a href="#" target="_blank">衬布</a>
+                                        <a href="#" target="_blank">流苏/穗</a>
+                                        <a href="#" target="_blank">洗唛/商标</a>
+                                        <a href="#" target="_blank">亮片/珠片</a>
+                                        <a href="#" target="_blank">烫图/烫钻</a>
+                                        <a href="#" target="_blank">垫肩</a>
+                                        <a href="#" target="_blank">衣领/毛领</a>
+                                        <a href="#" target="_blank">文胸配件</a>
+                                        <a href="#" target="_blank">吊粒/吊牌</a>
+                                        <a href="#" target="_blank">线/绳/带</a>
+                                        <a href="#" target="_blank">衣服防水胶带</a>
+                                    </dd>
+                                </dl>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
 			<ul class="menu_list">
 				<li><a href="#">丝纺城</a></li>
 				<li><a href="#">DIY定制</a></li>
