--- a/sfzl/shop/flowerDetail.html
+++ b/sfzl/shop/flowerDetail.html
@@ -70,8 +70,11 @@
 
                 </div>
                 <div class="title">
-                	<span class="main">走天下工作室<i class="icon"></i></span>
-                	<span class="sub">ZHENZHEN DESIGN</span>
+                    <div class="main">
+                        <span>走天下工作室</span>
+                        <i class="icon"></i>
+                    </div>
+                    <span class="sub">ZHENZHEN DESIGN</span>
                 </div>
             </div>
             <div class="r">
