--- a/sfzl/factory/detail.html
+++ b/sfzl/factory/detail.html
@@ -86,10 +86,19 @@
 
     <div id="factoryBox" class="w wrapperBox detailWrapper">
         <div class="deLBox">
-			<div class="face">
-				<img src="../public/common/img/faDetailImg.jpg">
+			<div id="slideBox" class="slideBox face">
+				<div class="hd">
+					<ul><li></li><li></li></ul>
+				</div>
+				<div class="bd">
+					<ul>
+						<li><a href="#"><img src="../public/common/img/p1.jpg" /></a></li>
+						<li><a href="#"><img src="../public/common/img/p2.jpg" /></a></li>
+					</ul>
+				</div>
+				<!-- <a class="prev" href="javascript:void(0)"></a>
+				<a class="next" href="javascript:void(0)"></a> -->
 			</div>
-			
         </div>
         <div class="deRBox">
         	<div class="ulBox">
@@ -106,7 +115,7 @@
         		</ul>
         	</div>
 			<div class="ulBox">
-				<div class="s1">
+				<div class="s2">
         			<h4>工厂分布</h4>
         			<i class="line"></i>
         			<a href="javascript:;" class="moreBtn">全部 ></a>
@@ -134,121 +143,64 @@
                     <button class="orderBtn">在线订单</button>
                 </form>
             </div>
-            <div class="searchTag">
-            	<div class="tagList">
-            		<div class="l">颜色：</div>
-            		<div class="r color">
-            			<a href="javascript:;" class="c1"></a>
-            			<a href="javascript:;" class="c2"></a>
-            			<a href="javascript:;" class="c3"></a>
-            			<a href="javascript:;" class="c4"></a>
-            			<a href="javascript:;" class="c5"></a>
-            			<a href="javascript:;" class="c6"></a>
-            			<a href="javascript:;" class="c7"></a>
-            			<a href="javascript:;" class="c8"></a>
-            			<a href="javascript:;" class="c9"></a>
-            			<a href="javascript:;" class="c10"></a>
-            			<a href="javascript:;" class="c11"></a>
-            		</div>
-            	</div>
-            	<div class="tagList">
-            		<div class="l">应用：</div>
-            		<div class="r">
-            			<a href="javascript:;" class="on">全部</a>
-            			<a href="javascript:;">丝巾</a>
-            			<a href="javascript:;">家纺</a>
-						<a href="javascript:;">家纺</a>
-						<a href="javascript:;">丝巾</a>
-            			<a href="javascript:;">家纺</a>
-						<a href="javascript:;">家纺</a>
-						<a href="javascript:;">丝巾</a>
-            			<a href="javascript:;">家纺</a>
-						<a href="javascript:;">家纺</a>
-						<a href="javascript:;">丝巾</a>
-            			<a href="javascript:;">家纺</a>
-						<a href="javascript:;">家纺</a>
-						<a href="javascript:;">丝巾</a>
-            			<a href="javascript:;">家纺</a>
-						<a href="javascript:;">家纺</a>
-						<a href="javascript:;">丝巾</a>
-            			<a href="javascript:;">家纺</a>
-						<a href="javascript:;">家纺</a>
-						<a href="javascript:;">丝巾</a>
-            			<a href="javascript:;">家纺</a>
-						<a href="javascript:;">家纺</a>
-						<a href="javascript:;">丝巾</a>
-            			<a href="javascript:;">家纺</a>
-						<a href="javascript:;">家纺</a>
-						<a href="javascript:;">丝巾</a>
-            			<a href="javascript:;">家纺</a>
-						<a href="javascript:;">家纺</a>
-						<a href="javascript:;">丝巾</a>
-            			<a href="javascript:;">家纺</a>
-						<a href="javascript:;">家纺</a>
-						<a href="javascript:;">丝巾</a>
-            			<a href="javascript:;">家纺</a>
-						<a href="javascript:;">家纺</a>
-            		</div>
-            	</div>
-            	<div class="tagList">
-            		<div class="l">内容：</div>
-            		<div class="r"><a href="javascript:;"></a></div>
-            	</div>
-            	<div class="tagList">
-            		<div class="l">回位：</div>
-            		<div class="r"><a href="javascript:;"></a></div>
-            	</div>
-            	<div class="tagList">
-            		<div class="l">状态：</div>
-            		<div class="r"><a href="javascript:;"></a></div>
-            	</div>
-            </div>
 		</div>
 		<!--search start-->
 
 
         <!--recommend start-->
         <div class="pro_box">
+        	<h3 class="tit">
+				<span class="fl titname">所有面料</span>
+			</h3>
             <div class="list">
                 <div class="item">
                 	<a href="javascript:;" class="pic">
                 		<img src="../public/common/img/d1.jpg">
                 	</a>
-                	<a href="javascript" class="s1">名称: 玉兰花花卉花朵瓷碗 </a>
-                	<span href="javascript" class="s2">授权使用: <i>￥353.00</i></span>
-                	<span href="javascript" class="s3"><label>买断使用:</label> 改商品不支持买断</span>
+                	<a href="javascript" class="s1">名称: 素绸缎</a>
+                	<span href="javascript" class="s2">价格: <i>￥353.00</i></span>
                 </div>
                 <div class="item">
                 	<a href="javascript:;" class="pic">
                 		<img src="../public/common/img/d1.jpg">
                 	</a>
-                	<a href="javascript" class="s1">名称: 玉兰花花卉花朵瓷碗 </a>
-                	<span href="javascript" class="s2">授权使用: <i>￥353.00</i></span>
-                	<span href="javascript" class="s3"><label>买断使用:</label> 改商品不支持买断</span>
+                	<a href="javascript" class="s1">名称: 素绸缎</a>
+                	<span href="javascript" class="s2">价格: <i>￥353.00</i></span>
                 </div>
                 <div class="item">
                 	<a href="javascript:;" class="pic">
                 		<img src="../public/common/img/d1.jpg">
                 	</a>
-                	<a href="javascript" class="s1">名称: 玉兰花花卉花朵瓷碗 </a>
-                	<span href="javascript" class="s2">授权使用: <i>￥353.00</i></span>
-                	<span href="javascript" class="s3"><label>买断使用:</label> ￥653.00</span>
+                	<a href="javascript" class="s1">名称: 素绸缎</a>
+                	<span href="javascript" class="s2">价格: <i>￥353.00</i></span>
                 </div>
                 <div class="item">
                 	<a href="javascript:;" class="pic">
                 		<img src="../public/common/img/d1.jpg">
                 	</a>
-                	<a href="javascript" class="s1">名称: 玉兰花花卉花朵瓷碗 </a>
-                	<span href="javascript" class="s2">授权使用: <i>￥353.00</i></span>
-                	<span href="javascript" class="s3"><label>买断使用:</label> 改商品不支持买断</span>
+                	<a href="javascript" class="s1">名称: 素绸缎</a>
+                	<span href="javascript" class="s2">价格: <i>￥353.00</i></span>
                 </div>
                 <div class="item">
                 	<a href="javascript:;" class="pic">
                 		<img src="../public/common/img/d1.jpg">
                 	</a>
-                	<a href="javascript" class="s1">名称: 玉兰花花卉花朵瓷碗 </a>
-                	<span href="javascript" class="s2">授权使用: <i>￥353.00</i></span>
-                	<span href="javascript" class="s3"><label>买断使用:</label> 改商品不支持买断</span>
+                	<a href="javascript" class="s1">名称: 素绸缎</a>
+                	<span href="javascript" class="s2">价格: <i>￥353.00</i></span>
+                </div>
+                <div class="item">
+                	<a href="javascript:;" class="pic">
+                		<img src="../public/common/img/d1.jpg">
+                	</a>
+                	<a href="javascript" class="s1">名称: 素绸缎</a>
+                	<span href="javascript" class="s2">价格: <i>￥353.00</i></span>
+                </div>
+                <div class="item">
+                	<a href="javascript:;" class="pic">
+                		<img src="../public/common/img/d1.jpg">
+                	</a>
+                	<a href="javascript" class="s1">名称: 素绸缎</a>
+                	<span href="javascript" class="s2">价格: <i>￥353.00</i></span>
                 </div>
             </div>
         </div>
