--- a/sfzl/designer/index.html
+++ b/sfzl/designer/index.html
@@ -139,7 +139,7 @@
             </div>
             <ul class="menu_list">
                 <li><a href="#">丝纺城</a></li>
-                <li><a href="#">DIY定制</a></li>
+                <!-- <li><a href="#">DIY定制</a></li> -->
                 <li><a href="#">设计师之家</a></li>
                 <li><a href="#">找工厂</a></li>
                 <li><a href="#">社区</a></li>
