--- a/sfzl/factory/index.html
+++ b/sfzl/factory/index.html
@@ -152,12 +152,12 @@
 		<div class="banner">
 		    <div class="bannerbox">
 		        <div id="slideBox" class="slideBox">
-		            <div class="hd">
+		            <!-- <div class="hd">
 		                <ul>
 		                    <li></li>
 		                    <li></li>
 		                </ul>
-		            </div>
+		            </div> -->
 		            <div class="bd">
 		                <ul>
 		                    <li>
@@ -168,8 +168,11 @@
 		                    </li>
 		                </ul>
 		            </div>
-		            <!-- <a class="prev" href="javascript:void(0)"></a>
-					<a class="next" href="javascript:void(0)"></a> -->
+                    <div class="w">
+                        <a class="prev" href="javascript:void(0)"></a>
+                        <a class="next" href="javascript:void(0)"></a>
+                    </div>
+		            
 		        </div>
 		    </div>
 		</div>
