--- a/sfzl/shop/index.html
+++ b/sfzl/shop/index.html
@@ -95,17 +95,19 @@
 		<div class="bannerbox">
 
 			<div id="slideBox" class="slideBox">
-				<div class="hd">
+				<!-- <div class="hd">
 					<ul><li></li><li></li></ul>
-				</div>
+				</div> -->
 				<div class="bd">
 					<ul>
 						<li><a href="#"><img src="../public/common/img/p1.jpg" /></a></li>
 						<li><a href="#"><img src="../public/common/img/p2.jpg" /></a></li>
 					</ul>
 				</div>
-				<!-- <a class="prev" href="javascript:void(0)"></a>
-				<a class="next" href="javascript:void(0)"></a> -->
+				<div class="w">
+                    <a class="prev" href="javascript:void(0)"></a>
+                    <a class="next" href="javascript:void(0)"></a>
+                </div>
 			</div>
 
 		</div>
