--- a/sfzl/designer/index.html
+++ b/sfzl/designer/index.html
@@ -579,8 +579,8 @@
     <link rel="stylesheet" href="../public/common/js/plugins/remodal/remodal.min.css">
     <link rel="stylesheet" href="../public/common/js/plugins/remodal/remodal-default-theme.min.css">
     <script src="../public/common/js/plugins/remodal/remodal.min.js"></script>
-    <script src="../public/common/js/com.min.js"></script>
-    <script src="../public/designer/index.min.js"></script>
+    <script src="../public/common/js/com.js"></script>
+    <script src="../public/designer/index.js"></script>
 
     
 </body>
