--- a/sfzl/designer/studio.html
+++ b/sfzl/designer/studio.html
@@ -345,8 +345,8 @@
     <!--foot end-->
     <script type="text/javascript" src="../public/common/js/jquery-1.8.3.min.js"></script>
     <script type="text/javascript" src="../public/common/js/jquery.SuperSlide.2.1.1.source.min.js"></script>
-    <script src="../public/common/js/com.min.js"></script>
-    <script src="../public/shop/detail.min.js"></script>
+    <script src="../public/common/js/com.js"></script>
+    <script src="../public/designer/studio.js"></script>
 </body>
 
 </html>
