--- a/sfzl/index/index.html
+++ b/sfzl/index/index.html
@@ -1017,7 +1017,7 @@
 <script type="text/javascript" src="../public/common/js/jquery-1.8.3.min.js"></script>
 <script type="text/javascript" src="../public/common/js/modernizr-1.7.min.js"></script>
 <script type="text/javascript" src="../public/common/js/jquery.SuperSlide.2.1.1.source.min.js"></script>
-<script src="../public/common/js/com.min.js"></script>
-<script src="../public/index/index.min.js"></script>
+<script src="../public/common/js/com.js"></script>
+<script src="../public/index/index.js"></script>
 </body>
 </html>
