--- a/sfzl/shop/flowerDetail.html
+++ b/sfzl/shop/flowerDetail.html
@@ -102,7 +102,7 @@
                 <img src="../public/common/img/bigflower.jpg">
             </div>
             <div class="detailInfo">
-            	<div class="tryBox open">
+            	<div class="tryBox close">
             		<a href="javascript:;" class="icon openBtn"></a>
             		<ul class="infoList">
             			<li class="maxW">名称：山脉风景</li>
@@ -115,7 +115,7 @@
             			<li>像素：2480 x 3508 PX</li>
             		</ul>
             	</div>
-            	<div class="tryBox close">
+            	<div class="tryBox open">
 					<ul class="imgList">
 						<li>
 							<a href="javascript:;" class="pic">
@@ -354,7 +354,7 @@
                 	<a href="javascript:;" class="pi">购买评价(<i>21</i>)</a>
                 </div>
                 <div class="contentBox">
-                	<div class="deBox">
+                	<div class="deBox cBox">
                 		<table cellpadding="0" cellspacing="0" class="infoTable">
                 			<tr>
                 				<th>名称</th>
@@ -416,7 +416,7 @@
 							</ol>
                 		</div>
                 	</div>
-                	<div class="piBox">
+                	<div class="piBox cBox">
                 		
                 	</div>
                 </div>
@@ -521,8 +521,8 @@
     <!--foot end-->
     <script type="text/javascript" src="../public/common/js/jquery-1.8.3.min.js"></script>
     <script type="text/javascript" src="../public/common/js/jquery.SuperSlide.2.1.1.source.min.js"></script>
-    <script src="../public/common/js/com.min.js"></script>
-    <script src="../public/shop/detail.min.js"></script>
+    <script src="../public/common/js/com.js"></script>
+    <script src="../public/shop/flowerDetail.js"></script>
 </body>
 
 </html>
