--- a/sfzl/factory/index.html
+++ b/sfzl/factory/index.html
@@ -439,8 +439,8 @@
 
     <script type="text/javascript" src="../public/common/js/jquery-1.8.3.min.js"></script>
     <script type="text/javascript" src="../public/common/js/jquery.SuperSlide.2.1.1.source.min.js"></script>
-    <script src="../public/common/js/com.min.js"></script>
-    <script src="../public/factory/index.min.js"></script>
+    <script src="../public/common/js/com.js"></script>
+    <script src="../public/factory/index.js"></script>
 
     
 </body>
