--- a/sfzl/shop/index.html
+++ b/sfzl/shop/index.html
@@ -365,7 +365,7 @@
 
 <script type="text/javascript" src="../public/common/js/jquery-1.8.3.min.js"></script>
 <script type="text/javascript" src="../public/common/js/jquery.SuperSlide.2.1.1.source.min.js"></script>
-<script src="../public/common/js/com.min.js"></script>
-<script src="../public/shop/index.min.js"></script>
+<script src="../public/common/js/com.js"></script>
+<script src="../public/shop/index.js"></script>
 </body>
 </html>
