--- a/sfzl/admin/login/login.html
+++ b/sfzl/admin/login/login.html
@@ -17,14 +17,14 @@
 				欢迎登陆
 			</div>
 		</div>
-		<div class="r" style="display: none;">
-			<span class="text">已有账号</span>
-			<a href="javascript:;" class="loginLink">请登录</a>
+		<div class="r">
+			<!-- <span class="text">已有账号</span>
+			<a href="javascript:;" class="loginLink">请登录</a> -->
 		</div>
 	</div>
 
-	<!--logo-->
-	<div class="logoBox">
+	<!--login-->
+	<div class="loginBox">
 		
 		<div class="w relative">
 			<form class="rBox">
