--- a/sfzl/admin/login/regist.html
+++ b/sfzl/admin/login/regist.html
@@ -27,10 +27,10 @@
 	<div class="w relative">
 		<form class="registForm">
 			<div class="row">
-				<input type="text" name="username" class="txt" />
+				<input type="text" name="username" class="txt" placeholder="用户名" />
 			</div>
 			<div class="row">
-				<input type="password" name="password" class="txt" />
+				<input type="password" name="password" class="txt" placeholder="设置密码" />
 			</div>
 			<div class="row">
 				<select class="nation">
@@ -38,14 +38,14 @@
 				</select>
 			</div>
 			<div class="row">
-				<input type="text" name="mobile" class="txt" />
+				<input type="text" name="mobile" class="txt" placeholder="请输入手机号码" />
 			</div>
 			<div class="row">
-				<input type="text" name="imgCheck" class="halfTxt" />
+				<input type="text" name="imgCheck" class="halfTxt" placeholder="图片验证码" />
 				<img src="../../public/common/img/imgCheck.jpg" class="imgCheck">
 			</div>
 			<div class="row">
-				<input type="text" name="mCheck" class="halfTxt" />
+				<input type="text" name="mCheck" class="halfTxt" placeholder="手机验证码" />
 				<button class="mCheckBtn">获取手机验证码</button>
 			</div>
 			<div class="row">
