--- a/sfzl/admin/user/index.html
+++ b/sfzl/admin/user/index.html
@@ -1,138 +1,139 @@
 <!doctype html>
 <html>
+
 <head>
-	<meta charset="utf-8">
-	<title>丝纺之路</title>
-	<link rel="stylesheet" type="text/css" href="../../public/common/css/admin.min.css" />
+    <meta charset="utf-8">
+    <title>丝纺之路</title>
+    <link rel="stylesheet" type="text/css" href="../../public/common/css/admin.min.css" />
 </head>
 
 <body>
-	<!--topinfo-->
-	<div class="head">
-		<div class="w oh">
-			<div class="fl t_login">
-				<span>您好，请登录</span>
-				<a href="#">免费注册</a>
-				<a href="#" class="wx_log">微信登录</a>
-				<a href="#" class="qq_log">QQ登录</a>
-			</div>
-			<div class="fr t_info">
-				<a href="#">我的丝纺</a>
-				<a href="#">我的订单</a>
-				<a href="#">收藏夹</a>
-				<a href="#">商品分类</a>
-				<a href="#">卖家中心</a>
-				<a href="#">联系客服</a>
-				<a href="#">网站导航</a>
-			</div>
-		</div>
-	</div>
+    <!--topinfo-->
+    <div class="head">
+        <div class="w">
+            <div class="fl">
+                <a href="javascript:;" class="indexLink">丝纺首页<i class="icon"></i></a>
+                <div class="user">
+                    <span class="welcome">你好，136622222222</span>
+                    <i class="vipIcon icon"></i>
+                    <span class="vip">3</span>
+                </div>
+                <div class="message">
+                    <span>消息</span>
+                    <i class="msgIcon icon on"></i>
+                </div>
+            </div>
+            <div class="fr">
+                <a href="javascript:;" class="link">我的丝纺</a>
+                <a href="javascript:;" class="link">我的订单</a>
+                <a href="javascript:;" class="link">收藏夹</a>
+                <a href="javascript:;" class="link">商品分类</a>
+                <a href="javascript:;" class="link">卖家中心</a>
+                <a href="javascript:;" class="link">联系客服</a>
+                <a href="javascript:;" class="link">网站导航</a>
+            </div>
+        </div>
+    </div>
+    <!--logo-->
+    <div class="logoBox">
+        <div class="w">
+            <div class="fl">
+                <div class="logo">
+                    <a href="./index.html" class="link"><img src="../../public/common/css/image/logo.png"></a>
+                </div>
+                <h2 class="title">我的丝纺</h2>
+                <ul class="menu">
+                    <li><a href="javascript:;">首页</a></li>
+                    <li><a href="javascript:;">账户设置</a></li>
+                    <li><a href="javascript:;">消息</a></li>
+                </ul>
+            </div>
+            <div class="fr">
+                <div class="searchBox">
+                    <input type="text" class="searchInput" placeholder="请输入商品名称" />
+                    <input type="submit" class="searchBtn" value="搜 索" />
+                </div>
+            </div>
+        </div>
+    </div>
 
-	<!--logo-->
-	<div class="logobox">
-		
-	</div>
-
-	
-
-<!--foot start-->
-	<div class="foot">
+	<div class="adminBox">
 		<div class="w">
-			<div class="fmenuBox">
-				<div class="fmenu">
-					<ul>
-						<li class="first">
-							<span>服务支持</span>
+			<div class="l fl">
+				<h2 class="title">全部功能</h2>
+				<ul class="menu">
+					<li><a href="javascript:;">我的订单</a></li>
+					<li><a href="javascript:;">我的购物车</a></li>
+					<li><a href="javascript:;">已买到的商品</a></li>
+					<li><a href="javascript:;">购买过的店铺</a></li>
+					<li><a href="javascript:;">我的收藏</a></li>
+					<li><a href="javascript:;">我的资金</a></li>
+					<li><a href="javascript:;">我的积分</a></li>
+					<li>
+						<a href="javascript:;">平台服务<i class="icon"></i></a>
+						<ul class="subMenu">
+							<li><a href="javascript:;">我要退款</a></li>
+							<li><a href="javascript:;">我要开店</a></li>
+							<li><a href="javascript:;">我要开加工厂</a></li>
+							<li><a href="javascript:;">我要开工作室</a></li>
+						</ul>
+					</li>
+				</ul>
+			</div>
+			<div class="m fl">
+				1
+			</div>
+			<div class="r fr">
+				<div class="rBox">
+					<h3>
+						会员推荐
+					</h3>
+					<ul class="list">
+						<li>
+							<img src="../../public/common/img/sAD.jpg">
+							<a class="text" href="javascript:;">大乐豆大乐豆大乐豆大乐豆大乐豆大乐豆大乐豆大乐豆</a>
 						</li>
 						<li>
-							<a href="javascript:;">帮助中心</a>
+							<img src="../../public/common/img/sAD.jpg">
+							<a class="text" href="javascript:;">大乐豆大乐豆大大乐豆大乐乐豆大乐豆大乐豆</a>
 						</li>
 						<li>
-							<a href="javascript:;">购买流程</a>
-						</li>
-						<li>
-							<a href="javascript:;">自助服务</a>
-						</li>
-					</ul>
-					<ul>
-						<li class="first">
-							<span>新闻资讯</span>
-						</li>
-						<li>
-							<a href="javascript:;">平台新闻</a>
-						</li>
-						<li>
-							<a href="javascript:;">行业动态</a>
-						</li>
-						<li>
-							<a href="javascript:;">配送方式</a>
-						</li>
-					</ul>
-					<ul>
-						<li class="first">
-							<span>产品展示</span>
-						</li>
-						<li>
-							<a href="javascript:;">DIY定制</a>
-						</li>
-						<li>
-							<a href="javascript:;">丝纺城</a>
-						</li>
-						<li>
-							<a href="javascript:;">找工厂</a>
-						</li>
-					</ul>
-					<ul>
-						<li class="first">
-							<span>关于我们</span>
-						</li>
-						<li>
-							<a href="javascript:;">联系客服</a>
-						</li>
-						<li>
-							<a href="javascript:;">关于丝纺之路</a>
-						</li>
-						<li>
-							<a href="javascript:;">加入丝纺之路</a>
-						</li>
-					</ul>
-					<ul>
-						<li class="first">
-							<span>配送方式</span>
-						</li>
-						<li>
-							<a href="javascript:;">上门提货</a>
-						</li>
-						<li>
-							<a href="javascript:;">配送服务查询</a>
-						</li>
-						<li>
-							<a href="javascript:;">配送费收取标准</a>
-						</li>
-						<li>
-							<a href="javascript:;">海外配送</a>
+							<img src="../../public/common/img/sAD.jpg">
+							<a class="text" href="javascript:;">大乐豆大乐豆大乐大乐豆大乐豆大乐豆大乐豆大乐豆</a>
 						</li>
 					</ul>
 				</div>
-				<div class="wxcode">
-					<span class="s1">丝纺之路微信服务号</span>
-					<img src="../public/common/img/wxcode.jpg" class="codeimg" />
-					<span class="s2">扫一扫添加官网微信</span>
+				<div class="rBox">
+					<h3>
+						我的足记 
+						<a href="javascript:;" class="moreBtn">更多 ></a>
+					</h3>
+					<ul class="list">
+						<li>
+							<img src="../../public/common/img/sAD.jpg">
+							<a class="text" href="javascript:;">大乐豆大乐豆大乐豆大乐豆大乐豆大乐豆大乐豆大乐豆大</a>
+						</li>
+						<li>
+							<img src="../../public/common/img/sAD.jpg">
+							<a class="text" href="javascript:;">大乐豆大乐豆大乐豆大乐豆大乐豆大乐豆大乐豆大乐豆</a>
+						</li>
+						<li>
+							<img src="../../public/common/img/sAD.jpg">
+							<a class="text" href="javascript:;">大乐豆大乐豆大乐豆大乐豆大乐豆大乐豆大乐豆大</a>
+						</li>
+					</ul>
 				</div>
 			</div>
-			<div class="copyrightBox">
-				COPYRIGHT © 2015 深圳同益新中控实业有限公司 ALL RIGHTS RESERVED 技术支持：富润电商PHONE:0755-22969785
-			</div>
-			<div class="fcompanyList">
-				<a href="http://www.tong1sun.com" target="_blank"><img src="../public/common/img/flogo.png"></a>
-				<a href="http://www.baidu.com" target="_blank"><img src="../public/common/img/baidu.png"></a>
 			</div>
 		</div>
-		
 	</div>
-<!--foot end-->
 
-<script type="text/javascript" src="../public/common/js/jquery-1.8.3.min.js"></script>
-<script type="text/javascript" src="../public/common/js/modernizr-1.7.min.js"></script>
+    <!--foot start-->
+    <div class="foot">
+    </div>
+    <!--foot end-->
+    <script type="text/javascript" src="../public/common/js/jquery-1.8.3.min.js"></script>
+    <script type="text/javascript" src="../public/common/js/modernizr-1.7.min.js"></script>
 </body>
+
 </html>
