--- a/sfzl/admin/login/login.html
+++ b/sfzl/admin/login/login.html
@@ -60,7 +60,7 @@
 	</div>
 <!--foot end-->
 
-<script type="text/javascript" src="../public/common/js/jquery-1.8.3.min.js"></script>
-<script type="text/javascript" src="../public/common/js/modernizr-1.7.min.js"></script>
+<script type="text/javascript" src="../../public/common/js/jquery-1.8.3.min.js"></script>
+<script type="text/javascript" src="../../public/common/js/modernizr-1.7.min.js"></script>
 </body>
 </html>
