--- a/sfzl/admin/user/index.html
+++ b/sfzl/admin/user/index.html
@@ -57,20 +57,20 @@
         </div>
     </div>
 
-	<div class="adminBox">
+	<div class="adminBox userIndex">
 		<div class="w">
 			<div class="l fl">
 				<h2 class="title">全部功能</h2>
 				<ul class="menu">
-					<li><a href="javascript:;">我的订单</a></li>
-					<li><a href="javascript:;">我的购物车</a></li>
-					<li><a href="javascript:;">已买到的商品</a></li>
-					<li><a href="javascript:;">购买过的店铺</a></li>
-					<li><a href="javascript:;">我的收藏</a></li>
-					<li><a href="javascript:;">我的资金</a></li>
-					<li><a href="javascript:;">我的积分</a></li>
-					<li>
-						<a href="javascript:;">平台服务<i class="icon"></i></a>
+					<li class="li"><a class="a" href="javascript:;">我的订单</a></li>
+					<li class="li"><a class="a" href="javascript:;">我的购物车</a></li>
+					<li class="li"><a class="a" href="javascript:;">已买到的商品</a></li>
+					<li class="li"><a class="a" href="javascript:;">购买过的店铺</a></li>
+					<li class="li"><a class="a" href="javascript:;">我的收藏</a></li>
+					<li class="li"><a class="a" href="javascript:;">我的资金</a></li>
+					<li class="li"><a class="a" href="javascript:;">我的积分</a></li>
+					<li class="li">
+						<a href="javascript:;" class="a">平台服务<i class="icon"></i></a>
 						<ul class="subMenu">
 							<li><a href="javascript:;">我要退款</a></li>
 							<li><a href="javascript:;">我要开店</a></li>
@@ -81,7 +81,31 @@
 				</ul>
 			</div>
 			<div class="m fl">
-				1
+				<div class="userInfo">
+					<div class="fl">
+						<img src="../../public/common/img/designerbigface.jpg" class="face">
+						<div class="info">
+							<h3>DD1234579</h3>
+							<span class="text">下午好</span>
+							<a href="javascript:;" class="changeBtn">修改个人信息 ></a>
+						</div>
+					</div>
+					<ul class="fr">
+						<li><a href="javascript:;">我的收货地址 ></a></li>
+						<li><a href="javascript:;">我的支付方式 ></a></li>
+						<li><a href="javascript:;">我的资金管理 ></a></li>
+					</ul>
+				</div>
+				<ul class="orderListTab">
+					<li class="fst"><a href="javascript:;">待付款</a></li>
+					<li><a href="javascript:;">待发货</a></li>
+					<li><a href="javascript:;" class="on">待收货</a></li>
+					<li><a href="javascript:;">待评价<i class="num">1</i></a></li>
+					<li><a href="javascript:;">退款</a></li>
+				</ul>
+				<div class="orderList">
+					列表
+				</div>
 			</div>
 			<div class="r fr">
 				<div class="rBox">
@@ -124,7 +148,6 @@
 					</ul>
 				</div>
 			</div>
-			</div>
 		</div>
 	</div>
 
@@ -132,8 +155,13 @@
     <div class="foot">
     </div>
     <!--foot end-->
-    <script type="text/javascript" src="../public/common/js/jquery-1.8.3.min.js"></script>
-    <script type="text/javascript" src="../public/common/js/modernizr-1.7.min.js"></script>
+    <script type="text/javascript" src="../../public/common/js/jquery-1.8.3.min.js"></script>
+    <script type="text/javascript" src="../../public/common/js/modernizr-1.7.min.js"></script>
+    <script type="text/javascript" src="../../public/common/js/admin.js"></script>
+	<script type="text/javascript">
+		
+	</script>
+
 </body>
 
 </html>
