--- a/sfzl/admin/seller/platformAuth.html
+++ b/sfzl/admin/seller/platformAuth.html
@@ -60,7 +60,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="adminBox setShop">
+	<div class="adminBox platformAuth">
 		<div class="w">
 			<div class="l fl">
 				<ul class="menu">
@@ -107,53 +107,61 @@
 					<a href="javascript:;">店铺基本设置</a>
 				</div>
 				<div class="tabBox">
-					<a href="javascript:;" class="on">店铺基本设置</a>
-					<a href="javascript:;">平台认证</a>
+					<a href="javascript:;">店铺基本设置</a>
+					<a href="javascript:;" class="on">平台认证</a>
 					<a href="javascript:;">经营许可证</a>
 					<a href="javascript:;">账号管理</a>
 				</div>
-				<div class="setBox">
-					<div class="setTab">
-						<a href="javascript:;" class="on shop">丝纺店铺</a>
-						<a href="javascript:;" class="mobileShop">手机丝纺店铺</a>
+				<div class="authBox auth1">
+					<div class="fl">
+						<div class="icon authBg">
+							<i class="icon on"></i>
+						</div>
 					</div>
-					<form class="setForm">
-						<div id="setShopForm">
-							<h4 class="ti">基础信息</h4>
-							<div class="item">
-								<label><i>*</i>店铺名称：</label>
-								<input type="text" placeholder="请输入店铺名称" class="text">
-								<span class="error">必填</span>
-							</div>
-							<div class="item">
-								<label><i>*</i>店铺LOGO：</label>
-								<!-- 上传控件 -->
-								<span class="error"></span>
-							</div>
-							<div class="item">
-								<label><i>*</i>店铺简介：</label>
-								<textarea placeholder="店铺简介会在店铺索引中展示！"></textarea>
-								<span class="error"></span>
-							</div>
-							<div class="item">
-								<label><i>*</i>联系地址：</label>
-								<input type="text" class="text">
-								<span class="error"></span>
-							</div>
-							<div class="item">
-								<label><i>*</i>店铺介绍：</label>
-								<!-- 编辑器控件 -->
-								<span class="error"></span>
-							</div>
-							<div class="item">
-								<label></label>
-								<input type="submit" value="保存" class="saveBtn" >
-							</div>
+					<div class="fr">
+						<span class="s1">亲爱的<span class="userId">1354446247</span>，您的身份</span>
+						<span class="s2">已通过认证</span>
+						<p class="p1">根据《网络交易管理办法》的规定，淘宝将定期或不定期复核您的身份信息。</p>
+						<p class="p2">请确保您账号绑定的身份信息真实有效，并确保账号为本人使用，请勿向他人转让、出租或借用账号。</p>
+					</div>
+				</div>
+				<div class="authBox auth2">
+					<div class="fl">
+						<div class="icon authBg">
+							<i class="icon on"></i>
 						</div>
-						<div id="setMobileShopForm">
-							
-						</div>
-					</form>
+					</div>
+					<div class="fr">
+						<span class="s1">亲爱的<span class="userId">1354446247</span>，贵公司的营业执照</span>
+						<span class="s2">已通过认证</span>
+						<p class="p1">根据《网络交易管理办法》的规定，淘宝将定期或不定期复核您的身份信息。</p>
+						<p class="p2">请确保您账号绑定的身份信息真实有效，并确保账号为本人使用，请勿向他人转让、出租或借用账号。</p>
+					</div>
+				</div>
+				<div class="authInfo">
+					<h4 class="ti">上次认证信息：</h4>
+					<ul class="infos">
+						<li>姓名：*天天</li>
+						<li>电话：136****4545</li>
+						<li class="long">地址：深圳市罗湖区同益新</li>
+						<li>证件号码：4***********1</li>
+						<li>证件有效期：2022-06-29</li>
+						<li class="long">认证通过时间：2016年4月6日</li>
+					</ul>
+				</div>
+				<div class="legalRight">
+					<h4 class="ti">当前权益：</h4>
+					<span class="s1">平台认证状态是否通过，将会直接影响您的以下权益</span>
+					<ul class="rightList">
+						<li class="open">
+							<i class="icon"></i>
+							<span class="text">平台开店</span>
+						</li>
+						<li class="right">
+							<i class="icon"></i>
+							<span class="text">维护权益</span>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</div>
